--- a/index.html
+++ b/index.html
@@ -111,6 +111,28 @@
                   <div class="team-member-wrap">
                     <h3 class="team-member">Игорь Демьяненко</h3>
                     <p class="team-role">Product Designer</p>
+                    <ul class="team-soc list">
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                      </a></li>
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                      </a></li>
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                      </a></li>
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                      </a></li>
+                    </ul> 
                   </div>
                  </li>
                 <li class="team-list-item">
@@ -118,6 +140,28 @@
                   <div class="team-member-wrap">
                     <h3 class="team-member">Ольга Репина</h3>
                     <p class="team-role">Frontend Developer</p>
+                     <ul class="team-soc list">
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                      </a></li>
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                      </a></li>
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                      </a></li>
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                      </a></li>
+                    </ul> 
                     </div>
                 </li>
                 <li class="team-list-item">
@@ -125,6 +169,28 @@
                     <div class="team-member-wrap">
                     <h3 class="team-member">Николай Тарасов</h3>
                     <p class="team-role">Marketing</p>
+                     <ul class="team-soc list">
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                      </a></li>
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                      </a></li>
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                      </a></li>
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                      </a></li>
+                    </ul> 
                     </div>
                 </li>
                 <li class="team-list-item">
@@ -132,6 +198,28 @@
                     <div class="team-member-wrap">
                     <h3 class="team-member">Михаил Ермаков</h3>
                     <p class="team-role">UI Designer</p>
+                     <ul class="team-soc list">
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                      </a></li>
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                      </a></li>
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                      </a></li>
+                      <li class="team-soc-item"><a href="" class="team-soc-link link">
+                        <svg class="team-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                      </a></li>
+                    </ul> 
                     </div>
                 </li>
             </ul>
