--- a/index.html
+++ b/index.html
@@ -228,9 +228,10 @@
     </main>
     <footer class="footer">
         <div class="container">
+          <div class="footer-wrap">
+            <div>
           <a class="logo-footer" href="index.html"> <span >Web</span>Studio</a>
-    
-            <address class="footer-adress">
+          <address class="footer-adress">
                 <ul>
                     <li>
                       <a class="address"
@@ -244,9 +245,36 @@
                         <a href="tel:+380991111111">+38 099 111 11 11</a>
                     </li>
                 </ul>
-            </address>
-        </div>
-    </footer>
+          </address>
+            </div>
+          <div class="footer-ivite">
+           <h2 class="footer-invite-title">Приєднуйтесь</h2>
+           <ul class="footer-soc list">
+                      <li class="footer-soc-item"><a href="" class="footer-soc-link link">
+                        <svg class="footer-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                      </a></li>
+                      <li class="footer-soc-item"><a href="" class="footer-soc-link link">
+                        <svg class="footer-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                      </a></li>
+                      <li class="footer-soc-item"><a href="" class="footer-soc-link link">
+                        <svg class="footer-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                      </a></li>
+                      <li class="footer-soc-item"><a href="" class="footer-soc-link link">
+                        <svg class="footer-soc-icon" width="20" height="20">
+                          <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                      </a></li>
+            </ul> 
+          </div>
+            </div>
+          </div>
+   </footer>
 </body>
 
 </html>
