eddit errors hw3

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,9 +58,7 @@
          <li class="menu-item">
             <button class="buttons" type="button">Маркетинг</button> </li>
             </ul>
-        </div>       
-            
-            <div class="container">
+        
             <ul class="elements-list">
                 <li class="elements-item">
                     <div>
@@ -155,15 +153,15 @@
           <a class="logo-footer" href="index.html"> <span >Web</span>Studio</a>
           <address class="footer-adress">
                 <ul>
-                    <li>
+                    <li class="footer-adress-item">
                       <a class="address"
               href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+Ucraina,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
               >г. Киев, пр-т Леси Украинки, 26</a>
                     </li>
-                    <li>
+                    <li class="footer-adress-item">
                         <a href="mailto:info@example.com">info@example.com</a>
                     </li>
-                    <li>
+                    <li class="footer-adress-item">
                         <a href="tel:+380991111111">+38 099 111 11 11</a>
                     </li>
                 </ul>
