--- a/index.html
+++ b/index.html
@@ -54,28 +54,28 @@
         <section class="about-section">
             <div class="container">
             <ul class="about-list">
-          <li>
+          <li class="about-list-items">
             <h3 class="about-title">Внимание к деталям</h3>
             <p class="about-text">
               Идейные соображения,а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="about-list-items">
             <h3 class="about-title" >Пунктуальность</h3>
             <p class="about-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="about-list-items">
             <h3 class="about-title">Планирование</h3>
             <p class="about-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="about-list-items">
             <h3 class="about-title">Современные технологии</h3>
            <p class="about-text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -233,15 +233,15 @@
           <a class="logo-footer" href="index.html"> <span >Web</span>Studio</a>
           <address class="footer-adress">
                 <ul>
-                    <li>
+                    <li class="footer-adress-item">
                       <a class="address"
               href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+Ucraina,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
               >г. Киев, пр-т Леси Украинки, 26</a>
                     </li>
-                    <li>
+                    <li class="footer-adress-item">
                         <a href="mailto:info@example.com">info@example.com</a>
                     </li>
-                    <li>
+                    <li class="footer-adress-item">
                         <a href="tel:+380991111111">+38 099 111 11 11</a>
                     </li>
                 </ul>
